@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20150725
+# Version: 20150927
 
 # Generic auto-generated build files
 *~
@@ -11,6 +11,7 @@
 *.lineno
 *.lo
 *.log
+*.loT
 *.Plo
 *.Po
 *.o
@@ -112,7 +113,6 @@ stamp-h[1-9]
 /include/libcaes/types.h
 /libcaes/libcaes.rc
 /libcaes/libcaes_definitions.h
-/pycaes/setup.py
 /tests/caes_test_crypt_cbc
 /tests/caes_test_crypt_ccm
 /tests/caes_test_crypt_cfb
