@@ -30,14 +30,9 @@ pycaes_la_LDFLAGS  = -module -avoid-version $(PYTHON_LDFLAGS)
 
 endif
 
-EXTRA_DIST = \
-	setup.py \
-	setup.py.in
-
 MAINTAINERCLEANFILES = \
 	Makefile.in
 
 distclean: clean
-	/bin/rm -f setup.py
 	/bin/rm -f Makefile
 
